updated search bar bug and updated profiles controller
Change-Id: I287f6ba433e0aa802a0e3c9473045a3ea482b94f

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -9,8 +9,8 @@
 	                    <small>Search For Someone</small>
 	                </h1>
 
-	                <%= form_tag profile_path, :method => 'get' do %>
-	                		<%= text_field_tag, :search, params[:search]%>
+	                <%= form_tag profiles_path, :method => 'get' do %>
+	                		<%= text_field_tag :search, params[:search]%>
 	                		<%= submit_tag "search"%>
 	                <% end %>
 
