refactored profile controller index by adding search function in profiles model
Change-Id: Ifc5f4530afdc9e4ff5daa29818423ca88cd5bcec

--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,2 +1,7 @@
 <h1>Profiles#index</h1>
 <p>Find me in app/views/profiles/index.html.erb</p>
+<ul>
+	<% @profiles.each do |profile| %> 
+		<li><%= profile.name %></li>
+	<% end %> 
+</ul>
