updated musician new page
Change-Id: Iab41a7ad03fb969a0d64855621121178b150730e

--- a/app/views/musicians/new.html.erb
+++ b/app/views/musicians/new.html.erb
@@ -1,2 +1,12 @@
-<h1>Musicians#new</h1>
-<p>Find me in app/views/musicians/new.html.erb</p>
+<h1> NEW Musician </h1>
+<%= form_for @musician do |f| %>
+	<br/>
+	<b> <%= f.label(:instrument)%>
+	<%= f.text_field(:instrument)%>
+	<br/>
+	<%= f.label(:genre)%><br/>
+	<%= f.text_field(:genre)%>
+	<br/>
+	<%= f.submit("Submit")%>
+<%end%>
+
