--- a/app/views/pages/choose_profile.html.erb
+++ b/app/views/pages/choose_profile.html.erb
@@ -1,3 +1,4 @@
+<h1> I am a...</h1>
 <%= link_to("Musician", new_musician_path) %>
-<%= link_to("Visual Artist", new_visual_path) %>
+<%= link_to("Visual Artist", new_visual_artist_path) %>
 <%= link_to("Venue Representative", new_venue_rep_path) %>
