--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -7,6 +7,9 @@
 	<%= f.label(:phone_number)%><br/>
 	<%= f.text_field(:phone_number)%>
 	<br/>
+	<%= f.fields_for :address do |builder| %>
+    <%= render "address_fields", :f => builder %>
+  <% end %>
 	<%= f.label(:bio)%> <br/>
 	<%= f.text_area(:bio)%>
 	<br/>
@@ -15,4 +18,3 @@
 	<br/>
 	<%= f.submit("Submit")%>
 <%end%>
-
