--- a/app/views/musicians/new.html.erb
+++ b/app/views/musicians/new.html.erb
@@ -7,6 +7,9 @@
 	<%= f.label(:genre)%><br/>
 	<%= f.text_field(:genre)%>
 	<br/>
+	<%= f.fields_for :address do |builder| %>
+    <%= render "address_fields", :f => builder %>
+  <% end %>
 	<%= f.submit("Submit")%>
 <%end%>
 
