--- a/app/views/venue_reps/new.html.erb
+++ b/app/views/venue_reps/new.html.erb
@@ -1,2 +1,9 @@
-<h1>VenueReps#new</h1>
-<p>Find me in app/views/venue_reps/new.html.erb</p>
+<h1> NEW Venue Rep </h1>
+<%= form_for @venue_rep do |f| %>
+	<br/>
+	<%= f.fields_for :address do |builder| %>
+    <%= render "address_fields", :f => builder %>
+  <% end %>
+	<%= f.submit("Submit")%>
+<%end%>
+
