--- a/app/views/visual_artists/new.html.erb
+++ b/app/views/visual_artists/new.html.erb
@@ -1,2 +1,12 @@
-<h1>VisualArtists#new</h1>
-<p>Find me in app/views/visual_artists/new.html.erb</p>
+<h1> NEW Visual Artist </h1>
+<%= form_for @visual_artist do |f| %>
+	<br/>
+	<b> <%= f.label(:medium)%>
+	<%= f.text_field(:medium)%>
+	<br/>
+	<%= f.fields_for :address do |builder| %>
+    <%= render "address_fields", :f => builder %>
+  <% end %>
+	<%= f.submit("Submit")%>
+<%end%>
+
