events show page styling
Change-Id: Ia51e58178c3c64f41500375196febcb56dce6a36

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -53,9 +53,14 @@ margin-left: 200px;
 
 /*====================================================*/
 
+#uber_background {
+  background-color: silver;
+}
+
 #events_background {
   background-color: black;
   color: silver;
+  padding: 20px;
 }
 
 #microphone {
@@ -64,6 +69,20 @@ margin-left: 200px;
   background-size: 100%;
 }
 
+#vector {
+  background-image: image-url('abstract.jpg');
+  repeat: no-repeat;
+  background-size: 100%;
+}
+
+.whitesmoke {
+  background-color: whitesmoke;
+  color: grey;
+}
+
+.nav_tags {
+  padding: 20px;
+}
 
 .calendar_grid {
   border: 2px solid gray;
