--- a/app/views/events/index.html
+++ b/app/views/events/index.html
@@ -1,4 +1,4 @@
-<div id="events_background">
+<section id="events_background">
 <h1 class="text-center"><b>Events</b></h1>	
 <h3 class="text-center">Click on an event title to see more information.</h3>
 
@@ -26,7 +26,7 @@
 </div>
 </div>  
 
-</div>
+</section>
 
 <!-- CALENDAR END -->
 
