updated nested forms for each profile
Change-Id: Ia3b668b587f7d8beb149466a33714e44446b9291

--- a/app/views/musicians/new.html.erb
+++ b/app/views/musicians/new.html.erb
@@ -1,14 +1,14 @@
 <h1> NEW Musician </h1>
 <%= form_for @musician do |f| %>
 	<br/>
-	<b> <%= f.label(:instrument)%>
+	<b> <%= f.label(:instrument)%><br/>
 	<%= f.text_field(:instrument)%>
 	<br/>
 	<%= f.label(:genre)%><br/>
 	<%= f.text_field(:genre)%>
 	<br/>
 	<%= f.fields_for :address do |builder| %>
-    <%= render "address_fields", :f => builder %>
+    <%= render 'musician_address_fields', :f => builder %>
   <% end %>
 	<%= f.submit("Submit")%>
 <%end%>
