--- a/app/views/visual_artists/new.html.erb
+++ b/app/views/visual_artists/new.html.erb
@@ -5,7 +5,7 @@
 	<%= f.text_field(:medium)%>
 	<br/>
 	<%= f.fields_for :address do |builder| %>
-    <%= render "address_fields", :f => builder %>
+    <%= render 'address_fields', :f => builder %>
   <% end %>
 	<%= f.submit("Submit")%>
 <%end%>
