--- a/app/views/venue_reps/new.html.erb
+++ b/app/views/venue_reps/new.html.erb
@@ -2,7 +2,7 @@
 <%= form_for @venue_rep do |f| %>
 	<br/>
 	<%= f.fields_for :address do |builder| %>
-    <%= render "address_fields", :f => builder %>
+    <%= render 'address_fields', :f => builder %>
   <% end %>
 	<%= f.submit("Submit")%>
 <%end%>
