--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -57,7 +57,7 @@ margin-left: 200px;
   background-color: silver;
 }
 
-#events_background {
+.events_background {
   background-color: black;
   color: silver;
   padding: 20px;
