--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,31 +1,29 @@
-<div class="form".
-	<h1>Edit Event</h1>
-	<%= form_for @event, html: {multipart: true} do |f| %>
-	  <%= f.label(:image)%>
-		<%= f.file_field(:image)%>
-		<br/>
-		<%= f.label(:event_name)%> 
-		<%= f.text_field(:event_name)%>
-		<br/>
-		<%= f.label(:event_date)%>
-		<%= f.date_select(:event_date)%>
-		<br/>
-		<%= f.label(:start_time)%>
-		<%= f.text_field(:start_time)%>
-		<br/>
-		<%= f.label(:event_desc)%>
-		<%= f.text_area(:event_desc)%>
-		<br/>
-		<%= f.label(:user_id)%>
-		<%= f.text_field(:user_id)%>
-		<br/>
-		<%= f.label(:venue_id)%>
-		<%= f.text_field(:venue_id)%>
-		<br/>
-		<br/>
-		<%= f.submit("Submit")%>
-	<%end%>
+<section class="events_background">
+	<section class="container">
 
-	<%= link_to("Delete", event_path(@event.id), method: :delete) %>
+			<h1>Edit Event</h1>
 
-</div>
+			<%= form_for @event, html: {multipart: true} do |f| %>
+				<h4>Image:</h4>
+				<%= f.file_field(:image)%>
+				<br/>
+				<h4>Event:</h4>
+				<%= f.text_field(:event_name)%>
+				<br/>
+				<h4>Date:</h4>
+				<%= f.date_select(:event_date)%>
+				<br/>
+				<h4>Time:</h4>
+				<%= f.text_field(:start_time)%>
+				</br>
+				<h4>Description:</h4>
+				<%= f.text_area(:event_desc)%>
+				<br/>
+
+				<a><%= f.submit("Submit")%></a>
+			<%end%>
+
+	</section>
+</section>
+
+
