--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,33 +1,26 @@
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<section class="events_background">
+	<section class="container">
 
-<link rel="stylesheet" type="text/css" href="css/jquery.datepick.css"> 
-<script type="text/javascript" src="js/jquery.plugin.js"></script> 
-<script type="text/javascript" src="js/jquery.datepick.js"></script>
+			<h1>New Event</h1>
 
-<h1>New Event</h1>
+			<%= form_for @event, html: {multipart: true} do |f| %>
+				<h4>Image:</h4>
+				<%= f.file_field(:image)%>
+				<br/>
+				<h4>Event:</h4>
+				<%= f.text_field(:event_name)%>
+				<br/>
+				<h4>Date:</h4>
+				<%= f.date_select(:event_date)%>
+				<br/>
+				<h4>Time:</h4>
+				<%= f.text_field(:start_time)%>
+				</br>
+				<h4>Description:</h4>
+				<%= f.text_area(:event_desc)%>
+				<br/>
 
-<%= form_for @event, html: {multipart: true} do |f| %>
- 	<%= f.label(:image)%>
-	<%= f.file_field(:image)%>
-	<br/>
-	<%= f.label(:event_name)%> 
-	<%= f.text_field(:event_name)%>
-	<br/>
-		<%= f.label(:event_date)%>
-	<%= f.date_select(:event_date)%>
-	<br/>
-	<%= f.label(:start_time)%>
-	<%= f.text_field(:start_time)%>
-	</br>
-	<%= f.label(:event_desc)%>
-	<%= f.text_area(:event_desc)%>
-	<br/>
-	<%= f.label(:user_id)%>
-	<%= f.text_field(:user_id)%>
-	<br/>
-	<%= f.label(:venue_id)%>
-	<%= f.text_field(:venue_id)%>
-	<br/>
-
-	<%= f.submit("Submit")%>
-<%end%>
+				<a><%= f.submit("Submit")%></a>
+			<%end%>
+	</section>
+</section>
