profiles index display images inline block with margins
Change-Id: I64dbb96843e0450d027ba26c31b4e0bf90eec1a6

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,8 +1,11 @@
-<p><%= image_tag @profile.image.url(:medium) %></p>
-<h1><%= @profile.name %></h1>
-<p> Bio: <%= @profile.bio %></p>
+<div class="image-centered container">
+
+	<p><%= image_tag @profile.image.url(:large) %></p>
+	<h1><%= @profile.name %></h1>
+	<p> Bio: <%= @profile.bio %></p>
 
 
-<%= link_to("Back", profiles_path(@profile.id)) %>
-<%= link_to("Edit", edit_profile_path(@profile.id)) %>
-<%= link_to("Delete", profile_path(@profile.id), method: :delete) %>
+	<%= link_to("Back", profiles_path(@profile.id)) %>
+	<%= link_to("Edit", edit_profile_path(@profile.id)) %>
+	<%= link_to("Delete", profile_path(@profile.id), method: :delete) %>
+</div>
