--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,8 +1,9 @@
-<h1>Profiles#index</h1>
-<p>Find me in app/views/profiles/index.html.erb</p>
-<ul>
-	<% @profiles.each do |profile| %>
-		<li><%= image_tag profile.image.url(:thumb) %></li>
-		<li><%= link_to(profile.name, profile_path(profile.id)) %></li>
-	<% end %> 
-</ul>
+<div class="container">
+	<h1 class="text-center">Browse Profiles</h1>
+			<% @profiles.each do |profile| %>
+				<p class="inline-block"><%= image_tag profile.image.url(:medium) %></br>
+				<%= link_to(profile.name, profile_path(profile.id)) %></p>
+			<% end %> 
+</div>
+
+	
