tweaked some content on home page, fixed the + issue and a few other things
Change-Id: Ie80d5ed276f87a36a4e738a94bb952c2b050e0f2

--- a/app/views/layouts/visitor.html.erb
+++ b/app/views/layouts/visitor.html.erb
@@ -72,7 +72,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">To Support and Connect Artists</h2>
                     <hr>
-                    <p class="text-faded"> [Scene Survival Kit] aims to provide resources for musicians to connect with venues and visual artists, thus spuring mutual promotion, and to tighten the bonds of the art community by offering a social platform.</p>
+                    <p class="text-faded"> Scene Survival Kit is dedicated to connecting local musicians with the venues and artists they need to effectively promote their work.</p>
                     <!-- <a href="#" class="btn btn-default btn-xl">Get Started!</a> -->
                 </div>
             </div>
@@ -90,13 +90,13 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-search bigger wow bounceIn text-primary"></i>
                         <h3>Find & Request</h3>
-                        <p class="text-muted">Looking for a musician to play for a show, a venue to perform at, or a visual artist to design and produce merchandise? Search for the right people in the right place.</p>
+                        <p class="text-muted">Looking for a musician to play for a show, a venue in which to perform, or a visual artist to design and produce merchandise? Search for the right people in the right place.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart-o bigger wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                        <h3>Musician Dating</h3>
+                        <h3>Musician 'Dating'</h3>
                         <p class="text-muted">A Tinder-inspired service for individual musicians seeking bands, or bands that are seeking members, to appeal themselves to others. Find your musical soul mate now.</p>
                     </div>
                 </div>
@@ -235,7 +235,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">From Yours Truly</h2>
                     <hr class="primary">
-                    <p>Here are the founders + developers of Scene Survival Kit.</p>
+                    <p>Here are the founders and developers of Scene Survival Kit.</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x wow bounceIn"></i>
