more styling stuff to events pages
Change-Id: Ic67c624e83d891682495fdea438c7e8e31d3e15f

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -101,10 +101,10 @@ margin-left: 200px;
 
   .month {
     a {
-      color: navy;
+      color: orangered;
     }
     a:hover {
-      color: crimson;
+      color: darkorange;
     }
     background-color: #ededed;
     border: 1px solid whitesmoke;
