--- a/app/views/events/index.html
+++ b/app/views/events/index.html
@@ -4,7 +4,7 @@
 
 
 <!-- CALENDAR START -->
-<div id="microphone" class="container">
+<div id="vector" class="container">
   <h2 class="text-center">
     <%= link_to "<", date: @date.prev_month %>
     <%= @date.strftime("%B %Y") %>
