--- a/app/views/layouts/visitor.html.erb
+++ b/app/views/layouts/visitor.html.erb
@@ -70,7 +70,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">To Support and Connect Artists</h2>
+                    <h2 class="section-heading">Support for Local Musicans and Artists</h2>
                     <hr>
                     <p class="text-faded"> Scene Survival Kit is dedicated to connecting local musicians with the venues and artists they need to effectively promote their work.</p>
                     <!-- <a href="#" class="btn btn-default btn-xl">Get Started!</a> -->
@@ -104,7 +104,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-bullhorn bigger wow bounceIn text-primary" data-wow-delay=".2s"></i>
                         <h3>Advertise Events</h3>
-                        <p class="text-muted">In addition to finding resources, we also help you spread the word about your gig! Whether you're a venue representative, musician, or artist, you may post your events in our calendar and advertise as much as you want.</p>
+                        <p class="text-muted">We can help you spread the word about your gig! Whether you are a musician, an artist, or a venue representative, you are welcome to post your event in our calendar and community forum.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
