added submit button on new search page
Change-Id: I65181c936499e05ce2a73e563a51bc2500c86c3c

--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -1,5 +1,5 @@
 <%= link_to 'Back', new_search_path %>
-<% if @search.search_profile empty? %>
+<% if @search.search_profile.empty? %>
 	<p> No Records Found. </p>
 <% else %>
 	<% @search.search_profile.each do |profile|%>
