--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,10 +1,10 @@
-<h2>new message</h2>
+<h2 class= "text-center">new message</h2>
 
-<div>
+<div class= "col-xs-12 col-md-8-offset-2 text-center">
 <%= form_for @message do |f| %>
-<%= f.text_field(:subject) %>
-<%= f.text_area(:message_body) %>
-<%= f.hidden_field(:message_reciever_id) %>
-<%= f.submit 'Save' %>
+<h4><%= f.text_field :subject, class: "input-lg text-center", placeholder: "Subject" %></h4>
+<h4><%= f.text_area :message_body, class: "input-lg text-center", placeholder: "Type message here." %></h4>
+<%= f.hidden_field :message_receiver_id, value: params[:message_reciever_id] %>
+<%= f.submit 'Send', class: "btn btn-warning btn-lg" %>
 <% end %>
 </div>
