--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,5 +1,10 @@
 show message
 
-<%= @message.subject %>
-<%= @message.body %>
-<%= link_to "Reply", new_reply_path()
+<h2><%= @message.subject %></h2>
+<h3><%= @message.message_body %></h3>
+<hr />
+<% @replies.each do |reply| %>
+<%= reply.reply_body %>
+<hr />
+<% end %> 
+<%= link_to("Reply", new_reply_path(message_id: @message.id), class: "btn btn-warning btn-lg") %>
